[project]
name = "neuromatrix-lsm"
version = "0.1.1"
description = "NeuroMatrix: A Lightweight Supervised Matrix model for adaptive prediction"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Joseph Kothapalli" }
]
keywords = ["machine-learning", "prediction", "statistics", "matrix", "regression"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy>=1.24"
]

[project.urls]
Homepage = "https://github.com/bennyk09/NeuroMatirx-LSM"
Repository = "https://github.com/bennyk09/NeuroMatirx-LSM"
Issues = "https://github.com/bennyk09/NeuroMatirx-LSM/issues"

[tool.setuptools.packages.find]
where = ["src"]